--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parse-rss",
-  "description": "parse rss feeds",
-  "version": "1.0.3",
+  "description": "parse rss feeds(for hujimiya use nyaa)",
+  "version": "1.0.3-hujimiya",
   "author": "nikezono",
   "dependencies": {
     "@types/request": "^2.48.1",
